Fix list card to make buttons not visible when published.

--- a/Final Project/client/src/App.css
+++ b/Final Project/client/src/App.css
@@ -331,6 +331,14 @@ input {
   font-size: 24pt;
 }
 
+.visible {
+  visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
 #close-modal-button {
   float: right;
 }
